# YOLO_clasificacion_y_conteo

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dataset/: data.yaml  notes.json
dataset/labels/: train.cache
dataset/labels/labels/train/: 03b9a616-manzana_1.txt  3955b21a-manzana_3.txt  63fe750d-manzana_2.txt
dataset/labels/train/: 3955b21a-manzana_3.txt:Zone.Identifier  ce37a546-manzana_4.txt
dataset2/: classes.txt  data.yaml  notes.json
dataset2/labels/: train.cache
dataset2/labels/train/: 01b80afb-1000042286.txt  0a6a28ab-1000042255.txt  10534e2e-1000042265.txt  105d1f46-1000042288.txt  12cecbfa-1000042299.txt  16e5e66c-1000042292.txt  198e6c36-1000042257.txt  2a77653b-1000042296.txt  2aa1166b-1000042275.txt  2b4bf922-1000042297.txt  2fb322fb-1000042289.txt  33600e04-1000042252.txt  3d8de7c7-1000042267.txt  483c0212-1000042253.txt  6bf83a90-1000042291.txt  874cd2fa-1000042295.txt  894f11fb-1000042287.txt  8ea9f29e-1000042256.txt  9b10be7b-1000042266.txt  9da40251-chumbos1.txt  a3b1b883-1000042270.txt  acf6ec62-1000042294.txt  c531ac61-1000042258.txt  d49c907f-1000042293.txt  de89b863-1000042254.txt  e3262d58-1000042298.txt  e7d73403-1000042269.txt  ea9e50c6-1000042290.txt  fa035586-1000042264.txt
src/: inference.py  metrics.py  training.py
