[project]
name = "yolo-clasificacion-y-conteo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.198",
    "deep-sort-realtime>=1.3.2",
    "label-studio>=1.6.0",
    "python-dotenv>=1.1.1",
]
